  [Michele Simionato]
  * Backported fix on the insured losses, see
    https://github.com/gem/oq-engine/issues/9178

python3-oq-engine (3.16.7-1~xenial01) xenial; urgency=low

  [Antonio Ettorre]
  * Upgraded Django version to version 3.2.21 with a security fix

  [Michele Simionato]
  * In case of a well known IndexError in disaggregation calculations, solved in
    newer versions of the engine, a helpful message is printed
  * Backported fix on sanity check for avg_losses and aggrisk
  * Backported fix to `avg_gmf`
  * Backported a fix to `oq reaggregate`
  * Backported fix to event based risk calculations with
    aggregate_by(parent) != aggregate_by(child)
  * Backported fix to the `risk_by_event` exporter for some calculations
    starting from GMFs on a CSV file
  * Backported fix to `import_gmfs_csv`, which was breaking sometimes with a
    filtered site collection

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Thu, 26 Oct 2023 09:54:13 +0000

python3-oq-engine (3.16.6-1~xenial01) xenial; urgency=low

  [Paolo Tormene]
  * Fixed bug #8907: unable to run ClassicalDamage demo on Windows

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Thu, 20 Jul 2023 12:51:10 +0000

python3-oq-engine (3.16.5-1~xenial01) xenial; urgency=low

  [Matteo Nastasi]
  * Fixed the IPT error "ClearableFileInput doesn't support uploading multiple
    files" caused by the upgrade to Django >= 3.2.19

  [Antonio Ettorre]
  * Upgraded Django version to version 3.2.20 with some security fixes

  [Kendra Johnson]
  * Added `DEFINED_FOR_INTENSITY_MEASURE_COMPONENT = const.IMC.RotD50` to
    the NGAEast and NSHMP2014 GMPEs

  [Michele Simionato]
  * Fixed the hanging of classical calculations due to large zmq packets

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Tue, 11 Jul 2023 09:14:09 +0000

python3-oq-engine (3.16.4-1~xenial01) xenial; urgency=low

  [Antonio Ettorre]
  * Upgraded Django version to version 3.2.19 with some security fixes
